fable/test/valid/format_used_twice.f
      program prog
   10 format(i2)
   20 format(i3)
      write(6, 10) 12
      write(6, 20) 345
      write(6, 10) 67
      end
