fable/test/syntax_error/duplicate_format_label.f
      program prog
10    format(i1)
   10 format(i2)
      end
